--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <body>
         <h1>This is index.html</h1>
         <hr>
+        <!--From using the get method -->
+        <!--Entered params returend in url bar  -->
         <form action="/name" method="get">
             <label for="fname">First name:</label>
             <input type="text" id="fname" name="fname"><br><br>
@@ -11,6 +13,8 @@
           </form>
           <hr>
           <h1>Post</h2>
+        <!--From using the post method -->
+        <!--Entered params not in the url bar -->
           <form action="/name" method="post">
             <label for="fname">First name:</label>
             <input type="text" id="fname" name="fname"><br><br>
